--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,7 @@
-ktorVersion=1.6.7
-kotlinVersion=1.6.10
-logbackVersion=1.2.3
-koinVersion= 3.1.5
+ktorVersion=1.6.4
+kotlinVersion=1.5.31
+logbackVersion=1.2.7
+koinVersion=3.1.4
 kotlin.code.style=official
+
+#org.gradle.java.home=C:\\Program Files\\Java\\jdk1.8.0_181
